--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -8,14 +8,15 @@
     tools:context=".AlarmActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:translationY="4dp"
+        android:id="@+id/alarmButton"
+        android:layout_width="0dp"
+        android:layout_height="400dp"
+        android:onClick="onStopAlarm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_circle2" />
+        app:srcCompat="@drawable/button_alarm_off" />
 
     <TextView
         android:id="@+id/timeAlarm"
